# toolshed

./: .gitignore  README-BCR.md  README.md
.bcr/: README.md  config.yml  metadata.json  metadata.template.json  presubmit.yml  source.template.json
.bcr/bazel/: presubmit.yml
.github/: dependabot.yml
.github/workflows/: _bazel.yml  bcr-publish.yml  check-bazel-alignment.yml  publish.yml  sanitizer-libs.yml
bazel/: .bazelrc  DEPENDENCY_ALIGNMENT.md  MODULE.bazel  deps.bzl  extensions.bzl  test_alignment.sh  verify_version_alignment.py  versions.bzl
bazel/compile/: BUILD  README.md  clang-wrapper.sh  clangxx-wrapper.sh
bazel/repository/: utils.bzl
bazel/test/: MODULE.bazel  README.md
bazel/test/arch_alias/bzlmod/: MODULE.bazel
bazel/test/bzlmod_test/: MODULE.bazel
bazel/test/workspace_test/: WORKSPACE
docs/: bzlmod_migration.md
tools/: bcr-publish.sh
