module(name = "envoy_toolshed", version = "")

bazel_dep(name = "aspect_bazel_lib", version = "2.16.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
bazel_dep(name = "rules_perl", version = "0.4.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")
# -- bazel_dep definitions -- #

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.jq()
use_repo(bazel_lib_toolchains, "jq_toolchains")

# LLVM toolchain is configured via WORKSPACE (toolchains.bzl)
# llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
# llvm.toolchain(
#     name = "llvm_toolchain",
#     llvm_version = "18.1.8",
# )
# use_repo(llvm, "llvm_toolchain")

PYTHON_VERSIONS = [
    "3.9",
    "3.10",
    "3.11",
    "3.12",
    "3.13",
]

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
[
    python.toolchain(
        is_default = python_version == PYTHON_VERSIONS[-1],
        python_version = python_version,
    )
    for python_version in PYTHON_VERSIONS
]

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

[
    pip.parse(
        hub_name = "pip3",
        python_version = python_version,
        requirements_lock = "//:requirements.txt",
    )
    for python_version in PYTHON_VERSIONS
]
[
    pip.parse(
        hub_name = "website_pip3",
        python_version = python_version,
        requirements_lock = "//website:requirements.txt",
    )
    for python_version in PYTHON_VERSIONS
]

use_repo(pip, "pip3", "website_pip3")

# Load perl repositories for toolchains
perl = use_extension("@rules_perl//perl:extensions.bzl", "perl_repositories")
use_repo(
    perl,
    "perl_linux_amd64",
    "perl_linux_arm64",
    "perl_darwin_amd64",
    "perl_darwin_arm64",
    "perl_windows_x86_64",
)

# Load source archives for compilation targets
source_archives = use_extension("//:extensions.bzl", "source_archives")
use_repo(
    source_archives,
    "m4_source",
    "autoconf_source",
    "automake_source",
    "libtool_source",
    "llvm_source",
)

# Load sysroot archives for cross-compilation
sysroot_archives = use_extension("//:extensions.bzl", "sysroot_archives")
use_repo(
    sysroot_archives,
    "sysroot_linux_amd64",
    "sysroot_linux_arm64",
)
